appId: de.endios.one
---
- launchApp:
    appId: de.endios.one
    clearState: false
- tapOn:
    text: "News 2"
- takeScreenshot: /tmp/verify-widget/case-110088/01_list_top
- swipe:
    start: 50%, 70%
    end: 50%, 30%
    duration: 500
- takeScreenshot: /tmp/verify-widget/case-110088/02_list_scrolled
- swipe:
    start: 50%, 70%
    end: 50%, 30%
    duration: 500
- takeScreenshot: /tmp/verify-widget/case-110088/03_list_scrolled_more
